# Changes by SCS:
# - renamed 'node-template' to 'substrate-test-node'
# - renamed 'runtime' to 'test-node-runtime'
# - add 'contracts'

[package]
name = "substrate-test-node"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "substrate-test-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.substrate-cli]
git = "https://github.com/paritytech/substrate"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.substrate-executor]
git = "https://github.com/paritytech/substrate"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.substrate-service]
git = "https://github.com/paritytech/substrate"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate"
package = "substrate-inherents"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "substrate-transaction-pool"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.network]
git = "https://github.com/paritytech/substrate"
package = "substrate-network"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.aura]
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate"
package = "substrate-finality-grandpa"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-finality-grandpa-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.substrate-client]
git = "https://github.com/paritytech/substrate"
package = "substrate-client"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate"
package = "substrate-basic-authorship"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.contracts]
git = "https://github.com/paritytech/substrate"
package = "paint-contracts"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.test-node-runtime]
path = "runtime"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate"
package = "substrate-build-script-utils"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"
