# Changes by SCS:
# - renamed 'node-template' to 'substrate-test-node'
# - renamed 'runtime' to 'test-node-runtime'
# - add 'contracts'

[package]
name = "substrate-test-node"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "substrate-test-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-cli]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-executor]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-service]
git = "https://github.com/paritytech/substrate"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate"
package = "substrate-inherents"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "substrate-transaction-pool"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.network]
git = "https://github.com/paritytech/substrate"
package = "substrate-network"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.aura]
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate"
package = "substrate-finality-grandpa"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate"
package = "substrate-finality-grandpa-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.substrate-client]
git = "https://github.com/paritytech/substrate"
package = "substrate-client"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate"
package = "substrate-basic-authorship"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.contracts]
git = "https://github.com/paritytech/substrate"
package = "pallet-contracts"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"

[dependencies.test-node-runtime]
path = "runtime"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate"
package = "substrate-build-script-utils"
rev = "3bf9540e72df5ecb3955845764dfee7dcdbb26b5"
