# Changes by SCS:
# - renamed 'node-template' to 'substrate-test-node'
# - renamed 'runtime' to 'test-node-runtime'
# - add 'contracts'

[package]
name = "substrate-test-node"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[workspace]
members = ["runtime"]

[[bin]]
name = "substrate-test-node"
path = "src/main.rs"

[dependencies]
futures = "0.3.1"
log = "0.4.8"
structopt = "0.3.8"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
package = "sp-core"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
package = "sp-inherents"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "sp-transaction-pool"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "sc-transaction-pool"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-network]
git = "https://github.com/paritytech/substrate"
package = "sc-network"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-consensus-aura]
git = "https://github.com/paritytech/substrate"
package = "sp-consensus-aura"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-consensus-aura]
git = "https://github.com/paritytech/substrate"
package = "sc-consensus-aura"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate"
package = "sp-consensus"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate"
package = "sc-finality-grandpa"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate"
package = "sp-finality-grandpa"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate"
package = "sc-client"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
package = "sp-runtime"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate"
package = "sc-basic-authorship"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.contracts]
git = "https://github.com/paritytech/substrate"
package = "pallet-contracts"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.test-node-runtime]
path = "runtime"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate"
package = "substrate-build-script-utils"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"
