[package]
name = "test-node-runtime"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"



[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-std"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.version]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-version"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-support"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.substrate-session]
default-features = false
git = "https://github.com/paritytech/substrate"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-balances"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-aura"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.aura-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura-primitives"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-grandpa"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.executive]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-executive"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-indices"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-randomness-collective-flip"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-system"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-timestamp"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-sudo"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-transaction-payment"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.sr-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-api"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.offchain-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-offchain-primitives"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.block-builder-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-block-builder-runtime-api"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.tx-pool-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-transaction-pool-runtime-api"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.inherents]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-inherents"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"

[dependencies.contracts]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "srml-contracts"
rev = "6ae3b6c4ddc03d4cdb10bd1d417b95d20f4c1b6e"



[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sr-api/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"aura/std",
	"aura-primitives/std",
	"grandpa/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"inherents/std",
    "contracts/std",
]
#no_std = [
#    "contracts/core",
#]
