[package]
name = "test-node-runtime"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-aura"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.aura-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-consensus-aura-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-balances"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.block-builder-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-block-builder-runtime-api"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.executive]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-executive"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-grandpa"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-indices"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.inherents]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-inherents"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.offchain-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-offchain-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-randomness-collective-flip"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.rstd]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-std"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-io"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.sr-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-api"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.sr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-primitives"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.substrate-session]
default-features = false
git = "https://github.com/paritytech/substrate"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-sudo"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-support"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-system"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-timestamp"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-transaction-payment"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.tx-pool-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "substrate-transaction-pool-runtime-api"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

[dependencies.version]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sr-version"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"

# added by SCS
[dependencies.contracts]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "paint-contracts"
rev = "8700dbb1858f01b6ea6e3fc5d40d1478e7634c60"



[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"runtime-io/std",
	"safe-mix/std",
	"serde",
	"sr-api/std",
	"sr-primitives/std",
	"substrate-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"tx-pool-api/std",
	"version/std",
    "contracts/std",  # added by SCS
]
