[package]
name = "test-node-runtime"
version = "2.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-aura"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-consensus-aura"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-balances"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-block-builder"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-executive"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-grandpa"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-indices"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-inherents"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-offchain"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-core"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-randomness-collective-flip"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-std"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-io"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-api"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-runtime"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-sudo"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-support"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-system"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-timestamp"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-transaction-payment"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-transaction-pool"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-version"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

# added by SCS
[dependencies.contracts]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-contracts"
rev = "00a400f82539e2f78e8ddbcd98aea512c87c5f3c"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
    "contracts/std",  # added by SCS
]
